[EOP-69] feat: trim deck to 74 printed cards (Tampering starts at 3, EoP starts at 5)
- Add Liquibase migration to delete 4 cards: TAMPERING rank 2, EoP ranks 2/3/4
- Update DeckFixture.fullDeck() to produce 74 cards
- Update all affected tests: deal distributions (3p→25/25/24, 4p→19/19/18/18,
  5p→15/15/15/15/14, 6p→13/13/12/12/12/12), DECK_SIZE=74, per-suit counts
- Use dynamic hand size in trick tests to handle uneven deal